--- a/frontend-election/app/css/mobile.css
+++ b/frontend-election/app/css/mobile.css
@@ -36,7 +36,6 @@
     margin: 15px;
   }
 
-
   .headerTest {
     overflow: hidden;
     position: fixed;
@@ -44,9 +43,6 @@
     width: 100vw;
     left: 0;
 
-  }
-
-  .divTest {
   }
 
   i {
@@ -58,17 +54,12 @@
 
   .nav-center {
     display: inline-flex;
-
   }
 
   .ulTest {
     margin: 2px;
     padding-left: 5px;
-
-
-
   }
-
 
   /* Knapper til navbar*/
   a.button_small {
@@ -86,7 +77,6 @@
     min-width: 54px;
   }
 
-
   /*-----------------------Tittel på hjemsiden-------------------*/
    .title-home {
     text-align: center;
@@ -94,6 +84,7 @@
      font-size: 1rem;
 
   }
+
   /*Overskrift*/
   .box1 {
     grid-column-start: 1;
@@ -104,7 +95,6 @@
   }
 
   /*-----------------------USN header-------------------*/
-
   .header {
     text-align: center;
 
@@ -116,14 +106,13 @@
     grid-template-columns: 1fr;
     gap: 1em;
   }
-  /*------------remove footer --------------*/
 
+  /*------------remove footer --------------*/
   .footer {
     display: none;
   }
+
   /* ------------------- picture card (box2) -------------------------------*/
-
-
   .picture-card {
     width: 70vw;
     border-radius: 5px;
@@ -131,6 +120,7 @@
 
 
   }
+
   .box2 {
     grid-column-start: 1;
     grid-column-end: 2;
@@ -139,5 +129,4 @@
     margin: 0 auto;
     padding-top: 100px;
   }
-
 }
